--- a/ansible.yaml
+++ b/ansible.yaml
@@ -26,10 +26,8 @@
         mode: '600'
         
     - name: Convert private key to PEM format
-      shell:
+      shell: >
         openssl rsa -in "{{ ssh_key_filepath }}" -out "{{ ssh_key_filepath }}.pem" -passin pass:{{ ssh_passphrase }}
-      args:
-        warn: false
 
     - name: Set permissions for PEM Private key
       file:
