--- a/ansible.yaml
+++ b/ansible.yaml
@@ -26,8 +26,10 @@
         mode: '600'
         
     - name: Convert private key to PEM format
-      shell: >
-        openssl rsa -in "{{ ssh_key_filepath }}" -out "{{ ssh_key_filepath }}.pem" -passin pass:{{ ssh_passphrase }}
+      community.crypto.openssl_privatekey_convert:
+        src_path: {{ ssh_key_filepath }}
+        dest_path: {{ ssh_key_filepath }}.pem
+        dest_passphrase: "{{ ssh_passphrase }}"
 
     - name: Set permissions for PEM Private key
       file:
