--- a/ansiblewip.yaml
+++ b/ansiblewip.yaml
@@ -9,9 +9,10 @@
     - name: Generate private key
       community.crypto.openssl_privatekey:
         path: "{{ ssh_key_filepath }}"
-        type: rsa
+        type: RSA
         size: 4096
         passphrase: "{{ ssh_passphrase }}"
+        cipher: auto
         state: present
         force: false
       register: private_key
