--- a/ansiblewip.yaml
+++ b/ansiblewip.yaml
@@ -3,12 +3,13 @@
   hosts: localhost
   connection: local
   vars:
-    ssh_key_filepath: "{{ ssh_key_filepath }}"
+    ssh_private_key_filepath: "{{ ssh_private_key_filepath }}"
+    ssh_public_key_filepath: "{{ ssh_public_key_filepath }}"
     ssh_passphrase: "{{ ssh_passphrase }}"
   tasks:
     - name: Generate private key
       community.crypto.openssl_privatekey:
-        path: "{{ ssh_key_filepath }}"
+        path: "{{ ssh_private_key_filepath }}"
         type: RSA
         size: 4096
         passphrase: "{{ ssh_passphrase }}"
@@ -19,10 +20,19 @@
 
     - name: Generate public key
       community.crypto.openssl_publickey:
-        path: "{{ ssh_key_filepath }}"
-        privatekey_path: "{{ ssh_key_filepath }}"
+        path: "{{ ssh_public_key_filepath }}"
+        privatekey_path: "{{ ssh_private_key_filepath }}"
         privatekey_passphrase: "{{ ssh_passphrase }}"
         state: present
         force: false
       when: private_key.changed
-      
+
+    - name: Set permissions for private key
+      file:
+        path: "{{ ssh_private_key_filepath }}"
+        mode: '400'
+
+    - name: Set permissions for public key
+      file:
+        path: "{{ ssh_public_key_filepath }}.pub"
+        mode: '600'
