--- a/Azure/azure-pipelines.yaml
+++ b/Azure/azure-pipelines.yaml
@@ -46,7 +46,7 @@ stages:
               buildNumber="${BUILD_BUILDNUMBER:2:6}"
               echo $buildNumber
               echo "##vso[task.setvariable variable=buildRevision;]$(echo $buildNumber)"
-              timestamp=$(date +%Y%m%d%H%M%S)
+              timestamp=$((RANDOM % 1000))
               echo "##vso[task.setvariable variable=timestamp;]$timestamp"
             displayName: "Setting the revision and timestamp"
  
@@ -104,7 +104,7 @@ stages:
               buildNumber="${BUILD_BUILDNUMBER:2:6}"
               echo $buildNumber
               echo "##vso[task.setvariable variable=buildRevision;]$(echo $buildNumber)"
-              timestamp=$(date +%Y%m%d%H%M%S)
+              timestamp=$((RANDOM % 1000))
               echo "##vso[task.setvariable variable=timestamp;]$timestamp"
             displayName: "Setting the revision and timestamp"
  
