--- a/Azure/OTEL/otel-deployment.yaml
+++ b/Azure/OTEL/otel-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: otel-collector
         image: otel/opentelemetry-collector-contrib:latest
-        ports:  # <--- Add this section
+        ports: 
         - containerPort: 4317  # OTLP gRPC port
           name: otlp-grpc
         - containerPort: 4318  # OTLP HTTP port
